apps/mayaui/yaml/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: kubemaya
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mayaui
  name: mayaui
  namespace: kubemaya
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mayaui
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mayaui
    spec:
      serviceAccountName: mayaui
      volumes:
      - name: upload
        hostPath:
          path: /tmp/upload
          type: DirectoryOrCreate
      - name: apps
        hostPath:
          path: /tmp/apps
          type: DirectoryOrCreate
      - name: images
        hostPath:
          path: /var/lib/rancher/k3s/agent/images
          type: DirectoryOrCreate
      containers:
      - image: kubemaya/mayaui:v1
        name: mayaui
        resources: {}
        volumeMounts:
        - mountPath: /tmp/upload
          name: upload
        - mountPath: /tmp/apps
          name: apps
        - mountPath: /tmp/images
          name: images
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mayaui
  name: mayaui
  namespace: kubemaya
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mayaui
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: nginx
  namespace: kubemaya
  annotations:
#    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: mayaui
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
